# Spl-IsoFind

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  SplIsoFind_environment.yml  pyproject.toml
demo/: Tutorial - moran's I.ipynb  Tutorial - plot examples.ipynb  Tutorial - predefined regions.ipynb
demo/Code/: moransI.py  plotting.py  preprocess.py
docs/: api.rst  conf.py  index.rst  installation.rst  requirements.txt
docs/notebooks/: Tutorial - moran's I.ipynb  Tutorial - plot examples.ipynb  Tutorial - predefined regions.ipynb
src/SplIsoFind/: __init__.py  plotting.py  preprocess.py  spatially_variable.py
tutorials/: Tutorial - moran's I.ipynb  Tutorial - plot examples.ipynb  Tutorial - predefined regions.ipynb
